practice/kubectl.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl
  labels:
    app: kubectl
spec:
  containers:
    - name: kubectl
      image: bitnami/kubectl
      command: ["/bin/bash", "-c", "--"]
      args: ["while true; do sleep 30; done;"]
  serviceAccountName: scaler
