practice/nginx-init-cotainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  volumes:
    - name: www
      emptyDir: {}        
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: www
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: "0.2"
          memory: 256Mi
