practice/prod-svc-2.yml
apiVersion: v1
kind: Service
metadata:
  name: prod-svc
  labels:
    app: nginx-svc
spec:
  selector:
    app: blue
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
