practice/block-to-yellow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-to-yellow
spec:
  podSelector:
    matchLabels:
      app: yellow
  policyTypes:
    - Ingress
  ingress: []
